# grpc

./: .gitignore  Cargo.toml  build.rs  buildspec.yml  datos.json  dockerfile
infraestructure/: connector.rs
infraestructure/implementations/: Client.rs
infraestructure/schemas/: user.rs
infraestructure/traits/: client.rs
proto/: services.proto
src/: main.rs  userstore.rs
src/infraestructure/: mod.rs
src/infraestructure/implementations/: dbcontext.rs
src/infraestructure/schemas/: schemauser.rs
src/infraestructure/traits/: idbcontext.rs
