[package]
name = "grpc_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.1"
prost = "0.10.1"
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
fs = "0.0.5"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes


[build-dependencies]
tonic-build = "0.7.2"